<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="eula_title">END-USERLICENSE AGREEMENT FOR PAX TECHNOLOGY SOFTWARE</string>
    <string name="pinpad_connect">Connecting to PINPAD...</string>
    <string name="test_only">FOR TEST ONLY\n(Not for commercial use)</string>
    <string name="demo_only">FOR DEMO ONLY\n(Not for commercial use)</string>
    <string name="test_and_demo">FOR TEST &amp; DEMO ONLY\n(Not for commercial use)</string>
    <string name="amount_default">0.00</string>
    <string name="time_default">00:00</string>
    <string name="length">length</string>
    <string name="length_en">length</string>
    <string name="length_fr">longueur</string>
    <string name="number">number</string>
    <string name="number_en">number</string>
    <string name="number_fr">nombre</string>
    <string name="tip_name_opt">Tip</string>
    <string name="tip_name_en">Tip</string>
    <string name="tip_name_fr">pourboire</string>
    <string name="history_total">Total</string>
    <string name="history_detail">Detail</string>
    <string name="history_detail_edc_type">EDC Type</string>
    <string name="history_detail_trans_type">Trans. Type</string>
    <string name="history_detail_card_no">Card No.</string>
    <string name="history_detail_status">Status</string>
    <string name="history_detail_auth_code">Auth. Code</string>
    <string name="history_detail_amount">Amount</string>
    <string name="history_detail_point">Point</string>
    <string name="history_detail_ref_no">Ref. No.</string>
    <string name="history_detail_card_type">Card Type</string>
    <string name="history_detail_dateTime">Date/Time</string>
    <string name="history_menu_print_trans_last">Print Last</string>
    <string name="history_menu_print_trans_detail">Print Detail</string>
    <string name="history_menu_print_trans_total">Print Summary</string>
    <string name="history_menu_print_last_total">Last Settle</string>
    <string name="history_menu_print_any">Print any</string>
    <string name="point">Point :</string>
    <string name="scroll_untipped">View Untipped Trans.</string>
    <string name="by_invoice">By Invoice No.</string>
    <string name="by_server">By Clerk/Server ID</string>
    <string name="by_trans">By Trans. No.</string>
    <string name="by_cardtype">By Card Type</string>
    <string name="by_cardnum">By Card No.</string>
    <string name="select_tip_menu">Tip Menu</string>
    <string name="store_forward">Store&amp;Forward</string>
    <string name="scroll_all">Scroll All</string>
    <string name="upload_trans">Upload Transaction</string>
    <string name="resent_failed">Resent Failed</string>
    <string name="by_referencenum">By Ref. No.</string>
    <string name="trans_confirm_btn">CONFIRM</string>
    <string name="cancel_btn" tools:ignore="ButtonCase">CANCEL</string>
    <string name="agree_btn">Agree</string>
    <string name="disagree_btn">Disagree</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_00">00</string>
    <string name="num_000">000</string>
    <string name="prompt_expiry_date_default">MM/YY</string>
    <string name="prompt_date_default">YYYY/MM/DD</string>
    <string name="prompt_input_amount">Please Enter Amount</string>
    <string name="prompt_input_tip">Please Enter Tip</string>
    <string name="prompt_select_tip">Please Select Tip</string>
    <string name="prompt_input_tip_in_dollars">Please Enter Tip (in dollars)</string>
    <string name="prompt_card_num">Card No.</string>
    <string name="btn_scan">SCAN</string>
    <string name="hint_enter_account">Please Enter Card Number:</string>
    <string name="enter_new_account">Please Enter New Card Number:</string>
    <string name="prompt_pin">Please Enter PIN</string>
    <string name="prompt_no_pin">Press OK to Bypass PIN</string>
    <string name="prompt_offline_pin">Please Enter PIN</string>
    <string name="prompt_use_pinpad">Please Use Pinpad</string>
    <string name="prompt_input_point">Please Enter Point</string>
    <string name="prompt_input_fuel_amount">Please Enter Fuel Amount</string>
    <string name="prompt_input_tax_amount">Please Enter Tax Amount</string>
    <string name="prompt_input_total_amount">Please Enter Total Amount</string>
    <string name="prompt_phone_xxx_xxx_xxxx">(xxx)xxx-xxxx</string>
    <string name="prompt_social_security">xxx-xx-xxxx</string>
    <string name="pls_input_4digit">Number must be 4 digits</string>
    <string name="data_cannot_zero">The data cannot be zero, please enter again</string>
    <string name="invalid_exp_date">Invalid Expiry</string>
    <string name="pls_input_again">Please Enter Amount</string>
    <string name="pls_select_again">Please Select Again</string>
    <string name="pls_select">Please Select</string>
    <string name="prompt_pwd">Please enter password</string>
    <string name="prompt_manager_pwd">Enter Manager Password</string>
    <string name="prompt_operator_pwd">Enter Operator Password</string>
    <string name="prompt_merchant_pwd">Enter %1$s\'s Password</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="prompt_merchant">Merchant</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_point">Total Point</string>
    <string name="pete_total">Total:</string>
    <string name="pete_tax">Tax:</string>
    <string name="cancel_sign">Cancel</string>
    <string name="clear_sign">Clear</string>
    <string name="finish_sign">Confirm</string>
    <string name="signature">Signature</string>
    <string name="pls_re_signature">Please Sign Again</string>
    <string name="pls_input_again_date">Please Enter Date again</string>
    <string name="please_enter_voucher_number">Please Enter Voucher Number</string>
    <string name="please_enter_auth_code">Please Enter Auth Code</string>
    <string name="pls_input_address">Please Enter Address</string>
    <string name="pls_input_zip_code">Please Enter Zip Code</string>
    <string name="pls_input_expiry_date">Please Enter Expiry Date</string>
    <string name="pls_input_transaction_number">Please Enter Transaction Number</string>
    <string name="pls_input_reference_number">Please Enter Reference Number</string>
    <string name="pls_input_invoice_number">Please Enter Invoice Number</string>
    <string name="pls_input_merchant_reference_number">Please Enter Merchant Reference Number</string>
    <string name="pls_input_oct_reference_number">Please Enter OCT Reference Number</string>
    <string name="pls_input_pin">Please Enter PIN</string>
    <string name="pls_input_vcode">Please Enter V-Code</string>
    <string name="prompt_input_4digit">Please Enter Last 4 Digits</string>
    <string name="prompt_input_all_digit">Please Enter All Digits</string>
    <string name="prompt_input_cashback">Please Enter Cashback</string>
    <string name="prompt_select_cashback">Please Select Cashback</string>
    <string name="pls_input_orig_trans_date">Please Enter Original Transaction Date</string>
    <string name="pls_input_pin_again">PIN Error, Please Retry\n\nPlease Enter PIN</string>
    <string name="pls_input_pin_last">Last PIN Attempt\n\nPlease Enter PIN</string>
    <string name="pls_input_dest_zip_code">Please Enter Destination Zip Code</string>
    <string name="pls_enter_pin" translatable="false">Please retry pin</string>
    <string name="last_pin_attempt" translatable="false">Last pin attempt</string>
    <string name="select_emv_aid">Please Select Application</string>
    <string name="select_sub_trans_type">Please Select Transaction Type</string>
    <string name="select_account_type">Please Select Debit Account</string>
    <string name="select_language">Please Select Language</string>
    <string name="select_ebt_type">Please Select EBT Type</string>
    <string name="check_card_present">Card Present?</string>
    <string name="select_bypass_reason">Explain Reason</string>
    <string name="select_moto_type">Please Select MOTO Type</string>
    <string name="select_refund_reason">Please Select Refund Reason</string>
    <string name="select_tax_reason">Please Select TAX Reason</string>
    <string name="select_edc_type">Please Select EDC Type</string>
    <string name="select_card_type">Please Select Card Type</string>
    <string name="select_trans_type">Please Select Transaction Type</string>
    <string name="select_search_type">Please Select Search Criteria</string>
    <string name="select_duplicate_override">Duplicate Transaction Override?</string>
    <string name="select_batch_menu">Batch Menu</string>
    <string name="select_batch_inquiry">Batch Inquiry</string>
    <string name="select_report_type">Select Report Type</string>
    <string name="select_tip_amount">Please Select Tip Amount</string>
    <string name="select_cashback_amount">Please Select Cashback</string>
    <string name="select_merchant">Please Select Merchant</string>
    <string name="select_orig_currency">Please Select Orig Trans Currency</string>
    <string name="pls_input_clerk_id">Please Enter Clerk ID</string>
    <string name="pls_input_server_id">Please Enter Server ID</string>
    <string name="pls_input_table_number">Please Enter Table Number</string>
    <string name="pls_input_phone_number">Please Enter Phone Number</string>
    <string name="pls_input_guest_number">Please Enter Guest Number</string>
    <string name="pls_input_order_number">Please Enter Order Number</string>
    <string name="pls_input_po_number">Please Enter P.O. Number</string>
    <string name="pls_input_proc_desc">Please Enter Product Description</string>
    <string name="pls_input_customer_code">Please Enter Customer Code</string>
    <string name="pls_input_prompt_restriction_code">Please Enter Prompt Restriction Code</string>
    <string name="pls_input_cs_phone_number">Please Enter Customer Service Phone</string>
    <string name="prompt_merchant_tax_id">Please Enter Merchant Tax ID</string>
    <string name="please_input_visa_installment_plan_acceptance_id">Please Enter Plan Acceptance ID</string>
    <string name="prompt_input_prompt_code_for_wex">Please Enter Prompt Code</string>
    <string name="prompt_input_fleet_odometer">Please Enter Odometer</string>
    <string name="prompt_input_fleet_id_no">Please Enter ID No.</string>
    <string name="prompt_input_fleet_driver_id">Please Enter Driver ID</string>
    <string name="prompt_input_fleet_vehicle_id">Please Enter Vehicle ID</string>
    <string name="prompt_input_fleet_user_id">Please Enter User ID</string>
    <string name="prompt_input_fleet_customer_data">Please Enter Data</string>
    <string name="prompt_input_fleet_department_no">Please Enter Department No.</string>
    <string name="prompt_input_fleet_job_no">Please Enter Job No.</string>
    <string name="prompt_input_fleet_license_no">Please Enter License No.</string>
    <string name="prompt_input_fleet_vehicle_no">Please Enter Vehicle No.</string>
    <string name="confirm_adjust_tip">Would you like to add this tip?</string>
    <string name="confirm_card_process_result">Card Error</string>
    <string name="confirm_current">Current</string>
    <string name="confirm_all">All</string>
    <string name="confirm_merchant_scope">Apply for all merchants or current?</string>
    <string name="confirm_decline">Decline</string>
    <string name="confirm_continue">Continue</string>
    <string name="signature_clear">Clear</string>
    <string name="signature_done">Enter</string>
    <string name="dialog_ok">OK</string>
    <string name="no_tip">No Tip</string>
    <string name="history_detail_trans_no">Trans NO.</string>
</resources>