<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trans_item_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_horizontal_small"
    android:paddingEnd="@dimen/space_horizontal_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

        <TextView
            android:id="@+id/trans_no_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/history_detail_trans_no"
            android:textSize="@dimen/font_size_hint" />

        <TextView
            android:id="@+id/trans_edctype_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/history_detail_edc_type"
            android:textSize="@dimen/font_size_hint" />

        <TextView
            android:id="@+id/trans_transtype_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/history_detail_trans_type"
            android:textSize="@dimen/font_size_hint" />

        <TextView
            android:id="@+id/trans_amount_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="end"
            android:text="@string/history_detail_amount"
            android:textSize="@dimen/font_size_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trans_cardnum_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/history_detail_card_no"
            android:textSize="@dimen/font_size_hint" />

        <TextView
            android:id="@+id/trans_cardtype_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/history_detail_card_type"
            android:textSize="@dimen/font_size_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trans_status_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/history_detail_status"
            android:textSize="@dimen/font_size_hint" />

        <TextView
            android:id="@+id/trans_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/history_detail_dateTime"
            android:textSize="@dimen/font_size_hint" />
    </LinearLayout>

</LinearLayout>