<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/space_horizontal"
    android:layout_marginEnd="@dimen/space_horizontal"
    android:keepScreenOn="true">

    <LinearLayout
        android:id="@+id/ll_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/space_vertical">

        <TextView
            android:id="@+id/amount_prompt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:gravity="bottom"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_prompt" />

        <TextView
            android:id="@+id/amount_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_default"
            android:gravity="bottom|end"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_large"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_amount"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prompt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prompt_pin"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_prompt" />

        <!--Pin is returned from PED, so use TextView as EditText -->
        <TextView
            android:id="@+id/pin_input_text"
            style="@style/DefEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space_vertical_small"
            android:focusableInTouchMode="true"
            android:enabled="false"
            android:gravity="center" />

        <TextView
            android:id="@+id/prompt_no_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_vertical_small"
            android:gravity="center"
            android:text="@string/prompt_no_pin"
            android:textColor="@color/secondary_text_light"
            android:textSize="@dimen/font_size_hint"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_vertical_large"
        app:layout_constraintTop_toBottomOf="@id/pin_input"
        android:background="@drawable/btn_bg_light"
        android:text="@string/trans_confirm_btn"
        android:textColor="@color/primary_text_dark"
        android:textSize="@dimen/font_button" />

    <TextView
        android:id="@+id/phy_pinpad_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/prompt_use_pinpad"
        android:drawableBottom="@drawable/ic_arrow_downward_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>