<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/trans_amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_vertical_small"
            android:layout_marginBottom="@dimen/space_vertical_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:paddingStart="@dimen/default_gap"
                android:text="@string/history_detail_amount"
                android:textColor="@color/primary_text_light"
                android:textSize="@dimen/font_size_prompt" />

            <TextView
                android:id="@+id/amount_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|end"
                android:paddingEnd="@dimen/default_gap"
                android:text="@string/amount_default"
                android:textColor="@color/primary_text_light"
                android:textSize="@dimen/font_size_value" />
        </LinearLayout>

        <TextView
            android:id="@+id/prompt_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_vertical"
            android:layout_marginBottom="@dimen/space_vertical"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_prompt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/option_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:spanCount="1" />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/space_vertical"
            android:layout_marginBottom="@dimen/space_vertical"
            android:background="@drawable/btn_bg_light"
            android:text="@string/dialog_ok"
            android:textColor="@color/primary_text_dark"
            android:textSize="@dimen/font_button" />
    </LinearLayout>

</ScrollView>