<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ============================================================================
  ~ = COPYRIGHT
  ~          PAX Computer Technology(Shenzhen) CO., LTD PROPRIETARY INFORMATION
  ~   This software is supplied under the terms of a license agreement or nondisclosure
  ~   agreement with PAX Computer Technology(Shenzhen) CO., LTD and may not be copied or
  ~   disclosed except in accordance with the terms in that agreement.
  ~     Copyright (C) 2018-? PAX Computer Technology(Shenzhen) CO., LTD All rights reserved.
  ~
  ~ Module Date: 2019/12/19
  ~ Module Auth: Fahy.F
  ~ Description:
  ~
  ~ Revision History:
  ~ Date                   Author                       Action
  ~ 2019/12/19              Fahy.F                       Create
  ~ ============================================================================
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pax.pay.ui.def.ShowDialogFormActivity">

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recycler_View"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginStart="30dp"
       android:layout_marginTop="@dimen/ui_activity_horizontal_margin"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/bottom_layer" />

   <LinearLayout
       android:id="@+id/bottom_layer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent">

      <Button
          android:id="@+id/cancel_btn"
          android:layout_width="0dp"
          android:layout_height="@dimen/button_height"
          android:layout_weight="1"
          android:background="@drawable/cancel_sign_background"
          android:text="@string/cancel_sign"
          android:textColor="@color/primary_text_light"
          android:textSize="@dimen/font_button"
          style="?android:attr/buttonBarButtonStyle" />

      <Button
          android:id="@+id/clear_btn"
          android:layout_width="0dp"
          android:layout_height="@dimen/button_height"
          android:layout_weight="1"
          android:background="@drawable/clear_sign_background"
          android:text="@string/signature_clear"
          android:textColor="@color/primary_text_light"
          android:textSize="@dimen/font_button"
          style="?android:attr/buttonBarButtonStyle" />

      <Button
          android:id="@+id/confirm_btn"
          android:layout_width="0dp"
          android:layout_height="@dimen/button_height"
          android:layout_weight="1"
          android:background="@drawable/confirm_sign_background"
          android:text="@string/signature_done"
          android:textColor="@color/primary_text_light"
          android:textSize="@dimen/font_button"
          style="?android:attr/buttonBarButtonStyle" />
   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
