<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/option_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/space_horizontal"
    android:layout_marginEnd="@dimen/space_horizontal">

    <LinearLayout
        android:id="@+id/trans_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:layout_marginBottom="@dimen/space_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount_prompt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/history_detail_amount"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_prompt" />

        <TextView
            android:id="@+id/amount_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:text="@string/amount_default"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amount_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prompt_select"
            android:textColor="@color/primary_text_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_vertical_small"
            android:layout_marginBottom="@dimen/space_vertical_small"
            android:textSize="@dimen/font_size_prompt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/option_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:spanCount="1"
            android:overScrollMode="never" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amount_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prompt_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/font_size_prompt" />

        <com.pax.us.pay.ui.component.keyboard.CustomKeyboardEditText
            android:id="@+id/data_edt"
            style="@style/DefEditText"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space_vertical_small"
            android:hint="" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/space_vertical"
        android:background="@drawable/btn_bg_light"
        android:text="@string/trans_confirm_btn"
        android:textColor="@color/primary_text_dark"
        android:textSize="@dimen/font_button" />

</LinearLayout>