<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        android:text="$25"
        android:textColor="@color/primary_dark"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_tip_large"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_tip_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_smaller"
        android:text="Tip"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/font_size_tip_normal"
        android:layout_gravity="center"/>

    <GridView
        android:id="@+id/grid_tip_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_small"
        android:layout_marginLeft="@dimen/space_horizontal"
        android:layout_marginRight="@dimen/space_horizontal"
        android:visibility="gone"
        android:numColumns="3"
        android:horizontalSpacing="@dimen/space_horizontal_small"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_enter_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical_middle"
        android:layout_marginLeft="@dimen/space_horizontal"
        android:layout_marginRight="@dimen/space_horizontal"
        android:padding="@dimen/space_vertical_middle"
        android:background="@drawable/tip_edit_style"
        android:orientation="horizontal">

        <com.paxus.view.widget.keyboard.PaxKeyboardEditText
            android:id="@+id/edit_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_horizontal_small"
            android:background="@drawable/tip_edit_style"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="end"
            android:inputType="textNoSuggestions"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/primary_dark"
            android:textSize="@dimen/font_size_tip_small"
            android:duplicateParentState="true"
            android:hint="@string/amount_default"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tv_tip_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/space_horizontal_small"
            android:text="@string/total_amount"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/font_size_tip_small"
            android:focusable="false"
            app:layout_constraintTop_toTopOf="@id/edit_tip"
            app:layout_constraintLeft_toLeftOf="@id/edit_tip"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/btn_no_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/space_horizontal_small"
        android:layout_marginLeft="@dimen/space_horizontal"
        android:layout_marginRight="@dimen/space_horizontal"
        android:text="@string/no_tip"
        android:textAllCaps="false"
        android:background="@drawable/tip_select_style"
        android:textColor="@drawable/tip_text_color"
        android:textSize="@dimen/font_size_tip_small" />

</LinearLayout>